# This is a combination of 2 commits. # This is the 1st commit message:
wip
# This is the commit message #2:

# This is a combination of 16 commits.
# This is the 1st commit message:

wip
# This is the commit message #2:

wip
# This is the commit message #3:

wip
# This is the commit message #4:

wip
# This is the commit message #5:

wip
# This is the commit message #6:

wip
# This is the commit message #7:

wip
# This is the commit message #8:

wip
# This is the commit message #9:

wip
# This is the commit message #10:

wip
# This is the commit message #11:

wip
# This is the commit message #12:

wip
# This is the commit message #13:

wip
# This is the commit message #14:

wip
# This is the commit message #15:

Add xsd:float support
# This is the commit message #16:

Add xsd:float support