@@ -69,17 +69,17 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>20</maven.compiler.source>
-        <maven.compiler.target>20</maven.compiler.target>
-        <java.version>17</java.version>
+        <java.version>201</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <jena.version>4.9.0</jena.version>
         <wicket.ver>9.13.0</wicket.ver>
         <hilbert.ver>0.2.2</hilbert.ver>
         <commons-pool2.ver>2.11.1</commons-pool2.ver>
         <jakarta.json.version>2.0.1</jakarta.json.version> 
-        <titanium-json-ld.ver>1.3.2</titanium-json-ld.ver>
+        <titanium-json-ld.ver>1.3.3-SNAPSHOT</titanium-json-ld.ver>
         <dcm4che.ver>5.29.2</dcm4che.ver>
-        <beakgraph.version>0.5.1</beakgraph.version>
+        <beakgraph.version>0.6.0</beakgraph.version>
         <keycloak.version>21.1.1</keycloak.version>
 	<infinispan.version>14.0.8.Final</infinispan.version>
 	<resteasy.version>4.7.7.Final</resteasy.version>
@@ -89,6 +89,7 @@
         <shiro.version>1.11.0</shiro.version>
         <jts.version>1.19.0</jts.version>
         <twelvemonkeys.version>3.9.4</twelvemonkeys.version>
+        <projectlombok.version>1.18.30</projectlombok.version>
     </properties>
     
     <parent>
@@ -322,6 +323,47 @@
             </build>
         </profile>
         <profile>
+            <id>ns2gs</id>
+            <build>
+                <finalName>ns2gs-${project.version}</finalName>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-shade-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>ns2gsshade</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>shade</goal>
+                                </goals>
+                                <configuration>
+                                    <transformers>
+                                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                            <resource>META-INF/spring.handlers</resource>
+                                        </transformer>
+                                        <transformer implementation="org.springframework.boot.maven.PropertiesMergingResourceTransformer">
+                                            <resource>META-INF/spring.factories</resource>
+                                        </transformer>
+                                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                            <resource>META-INF/spring.schemas</resource>
+                                        </transformer>
+                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                            <manifestEntries>
+                                                <Multi-Release>true</Multi-Release>
+                                            </manifestEntries>
+                                            <mainClass>com.ebremer.halcyon.converters.NS2GS</mainClass>
+                                        </transformer>
+                                    </transformers>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>heatmap2oa</id>
             <build>
                 <finalName>heatmap2oa-${project.version}</finalName>
@@ -514,7 +556,6 @@
                 <configuration>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
-                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -553,6 +594,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+            <version>${projectlombok.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -648,12 +690,6 @@
             <version>1.1.2</version>
         </dependency>
         <dependency>
-            <groupId>com.apicatalog</groupId>
-            <artifactId>titanium-json-ld</artifactId>
-            <version>${titanium-json-ld.ver}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
         </dependency>
@@ -717,6 +753,12 @@
             <artifactId>jena-arq</artifactId>
             <version>${jena.version}</version>
             <type>jar</type>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.apicatalog</groupId>
+                    <artifactId>titanium-json-ld</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
@@ -791,6 +833,12 @@
             <groupId>com.ebremer</groupId>
             <artifactId>BeakGraph</artifactId>
             <version>${beakgraph.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.apicatalog</groupId>
+                    <artifactId>titanium-json-ld</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.twelvemonkeys.imageio</groupId>
@@ -801,6 +849,11 @@
             <groupId>org.locationtech.jts</groupId>
             <artifactId>jts-core</artifactId>
             <version>${jts.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.apicatalog</groupId>
+            <artifactId>titanium-json-ld</artifactId>
+            <version>1.3.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <pluginRepositories>
